fixed issue with header covering pages

--- a/public/stylesheets/jingles-review.css
+++ b/public/stylesheets/jingles-review.css
@@ -10,7 +10,7 @@ body {
 .review-container {
     background-color: white;
     width: 60%;
-    margin: 0 auto;
+    margin: 80px auto 0px auto;
     border-radius: 3px;
     padding: 10px;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, .3);
