--- a/public/stylesheets/jingles-view.css
+++ b/public/stylesheets/jingles-view.css
@@ -9,6 +9,10 @@ body {
   margin: 8px;
 }
 
+.header {
+  box-shadow:  0 2px 2px rgba(0, 0, 0, 15%);
+}
+
 .main__frame {
   min-width: 320px;
   padding: 0 50px;
